--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,11 +78,11 @@ flutter:
         - asset: fonts/Proypet.ttf
         # - asset: fonts/Schyler-Italic.ttf
         #   style: italic
-    # - family: Trajan Pro
-    #   fonts:
-    #     - asset: fonts/TrajanPro.ttf
-    #     - asset: fonts/TrajanPro_Bold.ttf
-    #       weight: 700
+    - family: PT Sans
+      fonts:
+        - asset: fonts/PT_Sans/PTSans-Regular.ttf
+        - asset: fonts/PT_Sans/PTSans-Bold.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
