foto y configuracion de maps en ios

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^0.5.21+15
+  google_maps_flutter: ^0.5.24+1
   geolocator: ^5.2.0
   intl: ^0.16.1
 
@@ -30,6 +30,9 @@ dependencies:
   rxdart: ^0.23.1
   http:
   shared_preferences:    
+  image_picker:
+  camera: ^0.5.7+4
+  mime_type:
 
 dev_dependencies:
   flutter_test:
