--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Se necesita acceso al carrete</string>
+
+	<key>NSCameraUsageDescription</key>
+	<string>Se necesita acceso a la cámara</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Se necesita acceso al micrófono</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
