--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   http:
   shared_preferences:    
   image_picker:
-  camera: ^0.5.7+4
   mime_type:
+  share: ^0.6.3+6
+  cached_network_image: ^2.0.0
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
