--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   share: ^0.6.3+6
   cached_network_image: ^2.0.0
   url_launcher: ^5.4.2
+  decimal: ^0.3.5
+  number_display: 
 
 dev_dependencies:
   flutter_test:
