--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   url_launcher: ^5.4.2
   decimal: ^0.3.5
   number_display: 
+  searchable_dropdown: ^1.1.2
 
 dev_dependencies:
   flutter_test:
