--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   decimal: ^0.3.5
   number_display: 
   searchable_dropdown: ^1.1.2
+  image_crop: ^0.3.2
+  image_cropper: ^1.2.1
+  simple_image_crop: ^0.1.3
+  flutter_image_compress: ^0.6.5+1
 
 dev_dependencies:
   flutter_test:
