--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_cropper: ^1.2.1
   simple_image_crop: ^0.1.3
   flutter_image_compress: ^0.6.5+1
+  flutter_responsive: ^0.0.6
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+   - assets/map_style.txt
    - images/
   #  - images/greco.png
   #  - images/vet_prueba.jpg
