--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   simple_image_crop: ^0.1.3
   flutter_image_compress: ^0.6.5+1
   flutter_responsive: ^0.0.6
+  font_awesome_flutter: ^8.8.0
 
 dev_dependencies:
   flutter_test:
