--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_image_compress: ^0.6.5+1
   flutter_responsive: ^0.0.6
   font_awesome_flutter: ^8.8.0
+  smooth_star_rating: ^1.0.4+2
+  flutter_rating_bar: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
