--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   font_awesome_flutter: ^8.8.0
   smooth_star_rating: ^1.0.4+2
   flutter_rating_bar: ^3.0.1+1
+  animate_do: ^1.6.3
 
 dev_dependencies:
   flutter_test:
