--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.8.0
+  line_awesome_icons: ^1.0.4+2
   flutter_swiper: ^1.1.6
   rxdart: ^0.23.1
   http:
@@ -42,11 +44,11 @@ dependencies:
   image_cropper: ^1.2.1
   simple_image_crop: ^0.1.3
   flutter_image_compress: ^0.6.5+1
-  flutter_responsive: ^0.0.6
-  font_awesome_flutter: ^8.8.0
+  flutter_responsive: ^0.0.6  
   smooth_star_rating: ^1.0.4+2
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
+  
 
 dev_dependencies:
   flutter_test:
