--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
   condition: ^0.0.7
+  animations: ^1.0.0+5
+  shimmer: ^1.1.1
   
 
 dev_dependencies:
