--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   condition: ^0.0.7
   animations: ^1.0.0+5
   shimmer: ^1.1.1
-  webview_flutter: ^0.3.20+2
+  # webview_flutter: ^0.3.20+2
   
 
 dev_dependencies:
