--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^8.8.0
-  line_awesome_icons: ^1.0.4+2
+  font_awesome_flutter: ^8.8.0  
   flutter_swiper: ^1.1.6
   rxdart: ^0.23.1
   http:
@@ -37,20 +36,21 @@ dependencies:
   share: ^0.6.3+6
   cached_network_image: ^2.0.0
   url_launcher: ^5.4.2
-  decimal: ^0.3.5
-  number_display: 
   searchable_dropdown: ^1.1.2
-  image_crop: ^0.3.2
-  image_cropper: ^1.2.1
-  simple_image_crop: ^0.1.3
-  flutter_image_compress: ^0.6.5+1
-  flutter_responsive: ^0.0.6  
-  smooth_star_rating: ^1.0.4+2
+  image_cropper: ^1.2.1  
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
-  condition: ^0.0.7
-  animations: ^1.0.0+5
-  shimmer: ^1.1.1
+  # line_awesome_icons: ^1.0.4+2
+  # decimal: ^0.3.5
+  # number_display: 
+  # image_crop: ^0.3.2
+  # simple_image_crop: ^0.1.3
+  # flutter_image_compress: ^0.6.5+1
+  # flutter_responsive: ^0.0.6  
+  # smooth_star_rating: ^1.0.4+2
+  # condition: ^0.0.7
+  # animations: ^1.0.0+5
+  # shimmer: ^1.1.1
   # webview_flutter: ^0.3.20+2
   
 
