--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,11 +105,16 @@ flutter:
     - family: IconProypet
       fonts:
         - asset: fonts/IconProypet.ttf
-    - family: PT Sans
+    - family: Lato
       fonts:
-        - asset: fonts/PT_Sans/PTSans-Regular.ttf
-        - asset: fonts/PT_Sans/PTSans-Bold.ttf
+        - asset: fonts/Lato/Lato-Regular.ttf
+        - asset: fonts/Lato/Lato-Bold.ttf
           weight: 700
+    # - family: PT Sans
+    #   fonts:
+    #     - asset: fonts/PT_Sans/PTSans-Regular.ttf
+    #     - asset: fonts/PT_Sans/PTSans-Bold.ttf
+    #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
