--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,13 +38,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.user.proypet"
+        applicationId "com.proypet.user"
         minSdkVersion 21
         targetSdkVersion 28
-        // versionCode flutterVersionCode.toInteger()
-        versionCode 1
-        // versionName flutterVersionName
-        versionName "1.0.0"
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
