--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_cropper: ^1.2.1  
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
+  datetime_picker_formfield: ^1.0.0
   # line_awesome_icons: ^1.0.4+2
   # decimal: ^0.3.5
   # number_display: 
