--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
   datetime_picker_formfield: ^1.0.0
+  google_fonts: ^1.0.0
   # line_awesome_icons: ^1.0.4+2
   # decimal: ^0.3.5
   # number_display: 
@@ -106,11 +107,11 @@ flutter:
     - family: IconProypet
       fonts:
         - asset: fonts/IconProypet.ttf
-    - family: Lato
-      fonts:
-        - asset: fonts/Lato/Lato-Regular.ttf
-        - asset: fonts/Lato/Lato-Bold.ttf
-          weight: 700
+    # - family: Lato
+    #   fonts:
+    #     - asset: fonts/Lato/Lato-Regular.ttf
+    #     - asset: fonts/Lato/Lato-Bold.ttf
+    #       weight: 700
     # - family: PT Sans
     #   fonts:
     #     - asset: fonts/PT_Sans/PTSans-Regular.ttf
