--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   google_maps_flutter: ^0.5.24+1
   geolocator: ^5.2.0
   intl: ^0.16.1
@@ -35,7 +37,7 @@ dependencies:
   mime_type:
   share: ^0.6.3+6
   cached_network_image: ^2.0.0
-  url_launcher: ^5.4.2
+  url_launcher: ^5.4.5
   searchable_dropdown: ^1.1.2
   image_cropper: ^1.2.1  
   flutter_rating_bar: ^3.0.1+1
