--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,13 @@ dependencies:
   share: ^0.6.3+6
   cached_network_image: ^2.0.0
   url_launcher: ^5.4.5
+  # url_launcher: ^5.4.2
   searchable_dropdown: ^1.1.2
   image_cropper: ^1.2.1  
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
   datetime_picker_formfield: ^1.0.0
-  google_fonts: ^1.0.0
+  # google_fonts: ^1.0.0
   # line_awesome_icons: ^1.0.4+2
   # decimal: ^0.3.5
   # number_display: 
