--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   cached_network_image: ^2.0.0
   url_launcher: ^5.4.5
   # url_launcher: ^5.4.2
-  searchable_dropdown: ^1.1.2
+  searchable_dropdown: ^1.1.3
+  find_dropdown: ^0.2.0
+  dropdown_search: ^0.4.0
   image_cropper: ^1.2.1  
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
