--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,6 +72,10 @@ flutter {
     source '../..'
 }
 
+
+
+apply plugin: 'com.google.gms.google-services'
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
