--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  firebase_messaging: ^6.0.15
   font_awesome_flutter: ^8.8.0  
   flutter_swiper: ^1.1.6
   rxdart: ^0.23.1
