--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   cached_network_image: ^2.0.0
   url_launcher: ^5.4.5
   # url_launcher: ^5.4.2
-  searchable_dropdown: ^1.1.3
-  find_dropdown: ^0.2.0
-  dropdown_search: ^0.4.0
+  searchable_dropdown: ^1.1.3  
   image_cropper: ^1.2.1  
   flutter_rating_bar: ^3.0.1+1
   animate_do: ^1.6.3
   datetime_picker_formfield: ^1.0.0
+  # find_dropdown: ^0.2.0
+  # dropdown_search: ^0.4.0
   # google_fonts: ^1.0.0
   # line_awesome_icons: ^1.0.4+2
   # decimal: ^0.3.5
