main es stateful y abrir mapa

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,6 +12,12 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Se necesita acceso al micrófono</string>
 
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>comgooglemaps</string>
+		<string>iosamap</string>
+		<string>waze</string>
+	</array>
 
 
 	<key>CFBundleDevelopmentRegion</key>
