--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,23 +29,24 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_messaging: ^6.0.15
-  font_awesome_flutter: ^8.8.0  
-  flutter_swiper: ^1.1.6
-  rxdart: ^0.23.1
-  http:
-  shared_preferences:    
-  image_picker:
-  mime_type:
-  share: ^0.6.3+6
+
+  animate_do: ^1.6.3
   cached_network_image: ^2.0.0
+  datetime_picker_formfield: ^1.0.0
+  flutter_rating_bar: ^3.0.1+1
+  flutter_swiper: ^1.1.6
+  font_awesome_flutter: ^8.8.0  
+  http:
+  image_cropper: ^1.2.1  
+  image_picker:
+  map_launcher: ^0.4.5
+  mime_type:
+  rxdart: ^0.23.1
+  searchable_dropdown: ^1.1.3  
+  share: ^0.6.3+6
+  shared_preferences:    
   url_launcher: ^5.4.5
   # url_launcher: ^5.4.2
-  searchable_dropdown: ^1.1.3  
-  image_cropper: ^1.2.1  
-  flutter_rating_bar: ^3.0.1+1
-  animate_do: ^1.6.3
-  datetime_picker_formfield: ^1.0.0
-  map_launcher: ^0.4.5
   # find_dropdown: ^0.2.0
   # dropdown_search: ^0.4.0
   # google_fonts: ^1.0.0
@@ -114,11 +115,11 @@ flutter:
     - family: IconProypet
       fonts:
         - asset: fonts/IconProypet.ttf
-    # - family: Lato
-    #   fonts:
-    #     - asset: fonts/Lato/Lato-Regular.ttf
-    #     - asset: fonts/Lato/Lato-Bold.ttf
-    #       weight: 700
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato/Lato-Regular.ttf
+        - asset: fonts/Lato/Lato-Bold.ttf
+          weight: 700
     # - family: PT Sans
     #   fonts:
     #     - asset: fonts/PT_Sans/PTSans-Regular.ttf
