--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,17 +18,24 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter    
   flutter_localizations:
     sdk: flutter
   google_maps_flutter: ^0.5.24+1
   geolocator: ^5.2.0
+
+  # google_maps_webservice: ^0.0.16
+  # flutter_google_places: ^0.2.5
+  # location: ^1.4.1
+  
   intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_messaging: ^6.0.15
+  
+  geocoder: ^0.2.1
 
   animate_do: ^1.6.3
   cached_network_image: ^2.0.0
