--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dropdown_search: ^0.4.2
 
   simple_autocomplete_formfield: ^0.2.7
+
+  google_maps_webservice: ^0.0.16
   
   # search_map_place: ^0.3.0
 
