--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,9 +59,15 @@ flutter {
     source '../..'
 }
 
+
+apply plugin: 'com.google.gms.google-services'
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    // com.google.firebase:firebase-messaging:20.2.0
+    // implementation 'com.google.firebase:firebase-messaging:20.2.0'
 }
