--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   simple_autocomplete_formfield: ^0.2.7
   google_maps_webservice: ^0.0.16
   
+  path_provider: ^1.6.10
+
   animate_do: ^1.6.3
   cached_network_image: ^2.0.0
   datetime_picker_formfield: ^1.0.0
@@ -53,7 +55,7 @@ dependencies:
   rxdart: ^0.23.1
   searchable_dropdown: ^1.1.3  
   share: ^0.6.4+3
-  shared_preferences:    
+  shared_preferences: ^0.5.7+3
   url_launcher: ^5.4.5
   
 
