lanzado en play store

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   simple_autocomplete_formfield: ^0.2.7
   google_maps_webservice: ^0.0.16
   
-  path_provider: ^1.6.10
+  # path_provider: ^1.6.10
 
   animate_do: ^1.6.3
   cached_network_image: ^2.0.0
