--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.proypet.user"
+        applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1 //flutterVersionCode.toInteger()
