--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   
   intl: ^0.16.1
 
-  buttons_tabbar: ^0.1.1+1
+  # buttons_tabbar: ^0.1.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
