--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,11 +25,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-}
+// TODO : quitar comentarios para publicar
+
+// def keystoreProperties = new Properties()
+// def keystorePropertiesFile = rootProject.file('key.properties')
+// if (keystorePropertiesFile.exists()) {
+//     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+// }
 
 android {
     compileSdkVersion 28
@@ -47,22 +49,27 @@ android {
         applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1 //flutterVersionCode.toInteger()
-        versionName "1.0.0" //flutterVersionName
+        versionCode 2 //flutterVersionCode.toInteger()
+        versionName "1.1.0" //flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    signingConfigs {
-       release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
-       }
-   }
+// TODO : quitar comentarios para publicar
+
+//     signingConfigs {
+//        release {
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+//            storePassword keystoreProperties['storePassword']
+//        }
+//    }
+
    buildTypes {
        release {
-           signingConfig signingConfigs.release
+            // TODO : usar el de realese para publicar
+            // signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
        }
    }
 
@@ -80,6 +87,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    // TODO : quitar comentario para usar firebase
 
     // com.google.firebase:firebase-messaging:20.2.0
     // implementation 'com.google.firebase:firebase-messaging:20.2.0'
