--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,14 @@ dependencies:
   
   intl: ^0.16.1
 
-  # buttons_tabbar: ^0.1.1+1
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_messaging: ^6.0.15
   
-  flutter_local_notifications: ^1.4.3
+  # flutter_local_notifications: ^1.4.3
 
-  dropdown_search: ^0.4.2
+  # dropdown_search: ^0.4.2
   simple_autocomplete_formfield: ^0.2.7
   google_maps_webservice: ^0.0.16
   
