--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,13 +25,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-// TODO : quitar comentarios para publicar
-
-// def keystoreProperties = new Properties()
-// def keystorePropertiesFile = rootProject.file('key.properties')
-// if (keystorePropertiesFile.exists()) {
-//     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-// }
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 android {
     compileSdkVersion 28
@@ -49,27 +47,22 @@ android {
         applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 2 //flutterVersionCode.toInteger()
-        versionName "1.1.0" //flutterVersionName
+        versionCode 1 //flutterVersionCode.toInteger()
+        versionName "1.0.0" //flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-// TODO : quitar comentarios para publicar
-
-//     signingConfigs {
-//        release {
-//            keyAlias keystoreProperties['keyAlias']
-//            keyPassword keystoreProperties['keyPassword']
-//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-//            storePassword keystoreProperties['storePassword']
-//        }
-//    }
-
+    signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
    buildTypes {
        release {
-            // TODO : usar el de realese para publicar
-            // signingConfig signingConfigs.release
-            signingConfig signingConfigs.debug
+           signingConfig signingConfigs.release
        }
    }
 
@@ -87,8 +80,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
-    // TODO : quitar comentario para usar firebase
 
     // com.google.firebase:firebase-messaging:20.2.0
     // implementation 'com.google.firebase:firebase-messaging:20.2.0'
