--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_messaging: ^6.0.15
+  # firebase_messaging: ^6.0.15
   
-  flutter_local_notifications: ^1.4.3
+  # flutter_local_notifications: ^1.4.3
 
-  dropdown_search: ^0.4.2
+  # # dropdown_search: ^0.4.2
   simple_autocomplete_formfield: ^0.2.7
   google_maps_webservice: ^0.0.16
   
@@ -58,7 +58,8 @@ dependencies:
   searchable_dropdown: ^1.1.3  
   share: ^0.6.4+3
   shared_preferences: ^0.5.7+3
-  url_launcher: ^5.4.5
+  url_launcher: ^5.4.11
+  # ^5.4.5
   
 
 dev_dependencies:
