--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -19,7 +19,9 @@
 		<string>waze</string>
 	</array>
 
-
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
+	
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location when open.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
