--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,24 +25,17 @@ dependencies:
   geolocator: ^5.2.0
 
   geocoder: ^0.2.1
-  
   intl: ^0.16.1
-
-  # buttons_tabbar: ^0.1.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_messaging: ^6.0.15
+  # firebase_messaging: ^6.0.15
   
   # flutter_local_notifications: ^1.4.3
 
-  # # dropdown_search: ^0.4.2
   simple_autocomplete_formfield: ^0.2.7
   google_maps_webservice: ^0.0.16
-  
-  # path_provider: ^1.6.10
-  # youtube_player_flutter: ^7.0.0+6
 
   animate_do: ^1.6.3
   cached_network_image: ^2.0.0
@@ -60,7 +53,6 @@ dependencies:
   share: ^0.6.4+3
   shared_preferences: ^0.5.7+3
   url_launcher: ^5.4.11
-  # ^5.4.5
   
 
 dev_dependencies:
@@ -90,7 +82,6 @@ flutter:
    - assets/map_style.txt
    - images/
    - images/proypetip/
-  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
