--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+//TODO: esto debe estar activo para produccion
 // def keystoreProperties = new Properties()
 // def keystorePropertiesFile = rootProject.file('key.properties')
 // if (keystorePropertiesFile.exists()) {
@@ -44,7 +45,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.proypet.user"
+        applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 2 //TODO: esto siempre debe aumentar
@@ -52,6 +53,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+//TODO: esto debe estar activo para produccion
 //     signingConfigs {
 //        release {
 //            keyAlias keystoreProperties['keyAlias']
@@ -60,6 +62,8 @@ android {
 //            storePassword keystoreProperties['storePassword']
 //        }
 //    }
+
+//TODO: debe activarse release y desactivar debug
    buildTypes {
        release {
         //    signingConfig signingConfigs.release
