--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  # firebase_messaging: ^6.0.15
+  firebase_messaging: ^6.0.15
   
   # flutter_local_notifications: ^1.4.3
 
