--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.user2"
+        applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 2 //TODO: esto siempre debe aumentar
