--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,6 @@ dependencies:
   google_maps_flutter: ^0.5.28+1
   geolocator: ^5.2.0
 
-  # adobe_xd: ^0.1.4
-
   geocoder: ^0.2.1
   intl: ^0.16.1
 
@@ -62,11 +60,16 @@ dependencies:
   share: ^0.6.4+3
   shared_preferences: ^0.5.7+3
   url_launcher: ^5.4.11
-  
+
+  provider: ^4.3.1 #mobx +
+  flutter_mobx: ^1.1.0+1 #mobx 
+  mobx: ^1.2.1+1 #mobx
 
 dev_dependencies:
+  build_runner: #mobx
+  mobx_codegen: ^1.1.0+1 #mobx
   flutter_test:
-    sdk: flutter  
+    sdk: flutter
   flutter_launcher_icons:
 flutter_icons:
   android: "launcher_icon"
