--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,11 @@ dependencies:
   firebase_messaging: ^6.0.15
   
   dio: ^3.0.10
+  dio_http_cache: ^0.2.8
+
   get: 
   get_storage:
+
   get_it:
   # flutter_local_notifications: ^1.4.3
 
@@ -45,7 +48,6 @@ dependencies:
   #textfield_search: ^0.6.1
   flutter_snake_navigationbar: ^0.4.0+1
   select_dialog: ^1.1.0 #dialogo tipo lista con opcion de buscar elementos
-  # dio: ^3.0.9
   #fin nuevos
 
   animate_do: ^1.6.3
@@ -60,9 +62,9 @@ dependencies:
   map_launcher: ^0.4.5
   mime_type:
   rxdart: ^0.23.1
-  # searchable_dropdown: ^1.1.3  
-  share: ^0.6.4+3
+  # searchable_dropdown: ^1.1.3
   # shared_preferences: ^0.5.7+3
+  share: ^0.6.4+3
   url_launcher: ^5.4.11
 
   provider: ^4.3.1 #mobx +
