--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,13 +67,13 @@ dependencies:
   share: ^0.6.4+3
   url_launcher: ^5.4.11
 
-  provider: ^4.3.1 #mobx +
-  flutter_mobx: ^1.1.0+1 #mobx 
-  mobx: ^1.2.1+1 #mobx
+  # provider: ^4.3.1 #mobx +
+  # flutter_mobx: ^1.1.0+1 #mobx 
+  # mobx: ^1.2.1+1 #mobx
 
 dev_dependencies:
-  build_runner: ^1.10.1 #mobx
-  mobx_codegen: ^1.1.0+1 #mobx
+  # build_runner: ^1.10.1 #mobx
+  # mobx_codegen: ^1.1.0+1 #mobx
   flutter_test:
     sdk: flutter
   flutter_launcher_icons:
