--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,52 +23,68 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^0.5.28+1
   geolocator: ^5.2.0
+  google_maps_webservice: ^0.0.16
 
   geocoder: ^0.2.1
-  intl: ^0.16.1
+
+  intl: ^0.16.1 #para formatos
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_messaging: ^6.0.15
   
-  dio: ^3.0.10
-  dio_http_cache: ^0.2.8
-
+  #nuevos utiles
   get: 
   get_storage:
-  # nuevos utiles
+  dio: ^3.0.10
+  dio_http_cache: ^0.2.8
   websafe_network_image: ^1.0.5
-  ##
-  get_it:
-  # flutter_local_notifications: ^1.4.3
-
-  simple_autocomplete_formfield: ^0.2.7 #buscar con autocomplete
-  google_maps_webservice: ^0.0.16
-
-  #nuevos
-  #textfield_search: ^0.6.1
-  flutter_snake_navigationbar: ^0.4.0+1
-  select_dialog: ^1.1.0 #dialogo tipo lista con opcion de buscar elementos
-  #fin nuevos
-
-  animate_do: ^1.6.3
+  #fin nuevos utiles
+  
+  #imagenes 
   cached_network_image: ^2.0.0
+  image_cropper: ^1.2.1  
+  image_picker:
+  #fin imagenes
+
+  #animaciones
+  animate_do: ^1.6.3
+  #fin animaciones
+  
+  #fechas
   datetime_picker_formfield: ^1.0.0
+  #fin fechas
+  
+  #estrellas (para votar)
   flutter_rating_bar: ^3.0.1+1
+  #fin estrellas
+
+  #buscadores
+  simple_autocomplete_formfield: ^0.2.7 #buscar con autocomplete 
+  select_dialog: ^1.1.0 #modal con bucador y lista
+  #fin buscadores
+  
+  #lanzadores (para abrir apps u otro)
+  map_launcher: ^0.4.5
+  url_launcher: ^5.4.11
+  #lanzadores
+
   flutter_swiper: ^1.1.6
   font_awesome_flutter: ^8.8.0  
   http:
-  image_cropper: ^1.2.1  
-  image_picker:
-  map_launcher: ^0.4.5
+  
   mime_type:
   rxdart: ^0.23.1
+  
+  share: ^0.6.4+3
+
+  # flutter_local_notifications: ^1.4.3
+  # get_it:
+  # textfield_search: ^0.6.1
+  # flutter_snake_navigationbar: ^0.4.0+1
   # searchable_dropdown: ^1.1.3
   # shared_preferences: ^0.5.7+3
-  share: ^0.6.4+3
-  url_launcher: ^5.4.11
-
   # provider: ^4.3.1 #mobx +
   # flutter_mobx: ^1.1.0+1 #mobx 
   # mobx: ^1.2.1+1 #mobx
@@ -138,7 +154,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-# scripts:
-#   mobxb: flutter pub get & flutter packages pub run build_runner build
-#   mobxw: flutter pub get & flutter packages pub run build_runner watch
