--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.user"
+        applicationId "com.proypet.user"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 2 //TODO: esto siempre debe aumentar
@@ -86,6 +86,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    // implementation 'com.google.firebase:firebase-messaging:20.2.0'
+    // implementation 'com.google.firebase:firebase-messaging:20.2.0' //para pruebas
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 }
