--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,10 +94,10 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/icon/test.png"
-  adaptive_icon_background: "images/icon/test.png"
-  # image_path: "images/icon/proypet-c.png"
-  # adaptive_icon_background: "images/icon/proypet-c.png"
+  # image_path: "images/icon/test.png"
+  # adaptive_icon_background: "images/icon/test.png"
+  image_path: "images/icon/proypet-c.png"
+  adaptive_icon_background: "images/icon/proypet-c.png"
 
 
 # For information on the generic Dart part of this file, see the
