--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,8 +48,8 @@ android {
         applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2 //TODO: esto siempre debe aumentar
-        versionName "1.1.0" //TODO: esto siempre debe aumentar
+        versionCode 6 //TODO: esto siempre debe aumentar
+        versionName "1.1.2" //TODO: esto siempre debe aumentar
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -63,13 +63,22 @@ android {
 //        }
 //    }
 
-//TODO: debe activarse release y desactivar debug
-   buildTypes {
-       release {
-        //    signingConfig signingConfigs.release
-           signingConfig signingConfigs.debug
-       }
-   }
+    //TODO: debe activarse release y desactivar debug
+    buildTypes {
+        release {
+            //    signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
+        }
+    }
+
+    // buildTypes {
+    //     release {
+    //         minifyEnabled true
+    //         shrinkResources true
+    //         proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),'proguard-rules.pro'
+    //         signingConfig signingConfigs.release
+    //     }
+    // }
 
 }
 
