--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,6 +116,7 @@ flutter:
   assets:
    - assets/map_style.txt
    - images/
+   - images/icon/
    - images/proypetip/
 
   # An image asset can refer to one or more resolution-specific "variants", see
