--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   intl: ^0.16.1 #para formatos
 
   email_validator: ^1.0.6
+  flutter_facebook_login: ^3.0.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
