--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,24 +62,24 @@ android {
     //     }
     // }
 
-//     //TODO: esto debe estar activo para produccion
-//     signingConfigs {
-//        release {
-//            keyAlias keystoreProperties['keyAlias']
-//            keyPassword keystoreProperties['keyPassword']
-//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-//            storePassword keystoreProperties['storePassword']
-//        }
-//    }
+    //TODO: esto debe estar activo para produccion
+    signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
 
-//     buildTypes {
-//         release {
-//             minifyEnabled true
-//             shrinkResources true
-//             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),'proguard-rules.pro'
-//             signingConfig signingConfigs.release
-//         }
-//     }
+    buildTypes {
+        release {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+    }
 
 }
 
@@ -98,5 +98,5 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging:20.2.0' //para pruebas
     // implementation 'com.google.firebase:firebase-analytics:17.5.0' //para produccion
-    implementation 'com.facebook.android:facebook-login:[5,6)'
+     implementation 'com.facebook.android:facebook-login:[5,6)'
 }
