--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,8 @@ dependencies:
   google_maps_webservice: ^0.0.16
   google_sign_in: ^4.5.6 #login con google
   http:
-  image_cropper:
-  image_picker: ^0.6.7+14
+  image_cropper: ^1.3.1
+  image_picker: ^0.6.7+21
   intl: ^0.16.1 #para formatos
   lottie: ^0.7.0+1
   map_launcher: ^0.4.5
