update app alert

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,7 @@ android {
         // applicationId "com.proypet.user"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 13 //Ya aumente para la version 1.4.0
+        versionCode 13 //12 Ya aumente para la version 1.4.0
         versionName "1.4.0" //TODO: esto siempre debe aumentar
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
