--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ description: Reserva citas en segundos en Veterinarias Certificadas y accede a b
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
+  # sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
