--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -149,6 +149,7 @@ flutter:
    - images/gif/
    - images/icon/
    - images/lottie/
+   - images/marker/
    - images/notificacion/
    - images/svg/
 
