--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,5 @@
 storePassword=peru@123
 keyPassword=peru@123
 keyAlias=upload
-storeFile=/Users/josealonsomassarolando/keystore.jks
+# storeFile=/Volumes/Macintosh\ HD/Users/josealonsomassarolando/keystore.jks
+storeFile=/Users/joalmr/keystore.jks
