--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+project.ext.envConfigFiles = [
+    debug: ".env.development",
+    release: ".env.production",
+    anothercustombuild: ".env",
+]
+apply from: project(':flutter_config').projectDir.getPath() + "/dotenv.gradle"
+
 //TODO: esto debe estar activo para produccion
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
@@ -45,7 +52,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.user"
+        applicationId project.env.get("APP_ID")
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 15 //Ya aumente para la version 1.4.2
@@ -89,7 +96,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    implementation 'com.google.firebase:firebase-messaging:20.2.0' //para pruebas
-    // implementation 'com.google.firebase:firebase-analytics:17.5.0' //para produccion
+    implementation project.env.get("FIREBASE") //firebase
     implementation 'com.facebook.android:facebook-login:[8.1)'
 }
