--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,46 +22,42 @@ dependencies:
     sdk: flutter    
   flutter_localizations:
     sdk: flutter
-  
-  # cron: ^0.2.4
-  # path_provider:
-  # sqflite:
-  
-  # dio: ^3.0.10
 
-  flutter_config: ^1.0.8
+  cupertino_icons:   
+
+  get: ^4.1.4
+  get_storage: ^2.0.2
+  http: ^0.13.2
+
+  flutter_config: ^2.0.0 #^1.0.8
   
-  ai_notification_enable: ^1.6.0 #activar notificaciones
-  animate_do: ^1.6.3
-  badges: ^1.1.4  
-  cached_network_image: ^2.0.0
-  datetime_picker_formfield: ^1.0.0
-  day_night_time_picker: ^0.4.0
-  dotted_line: ^2.0.2
-  email_validator: ^1.0.6
+  ai_notification_enable: ^1.6.1 #activar notificaciones
+  animate_do: ^2.0.0
+  badges: ^1.2.0
+  cached_network_image: ^3.0.0
+  datetime_picker_formfield: ^2.0.0
+  day_night_time_picker: ^1.0.1+1
+  dotted_line: ^3.0.0
+  email_validator: ^2.0.1
   firebase_messaging: ^6.0.15
-  flutter_conditional_rendering: ^1.1.1
-  flutter_email_sender: ^3.0.1
-  # flutter_local_notifications: ^3.0.2
-  flutter_login_facebook: ^0.4.1 #login con facebook
-  flutter_rating_bar: ^3.0.1+1
-  flutter_svg_provider: ^0.1.8
-  flutter_swiper: ^1.1.6
-  font_awesome_flutter: ^8.8.0  
-  geolocator: ^5.2.0
+  flutter_conditional_rendering: ^2.0.0
+  flutter_email_sender: ^5.0.0
+  flutter_login_facebook: ^1.0.1
+  flutter_rating_bar: ^4.0.0
+  flutter_svg_provider: ^0.1.9
+  flutter_swiper: ^1.1.6 #deprecado
+  font_awesome_flutter: ^9.0.0 #observado
+  geolocator: ^7.0.3
   geocoder: ^0.2.1
-  get:
-  get_storage:
-  google_fonts: ^1.1.1
-  google_maps_flutter: ^0.5.28+1
-  google_maps_webservice: ^0.0.16
-  google_sign_in: ^4.5.9 #login con google
-  http:
-  image_cropper: ^1.3.1
-  image_picker: ^0.6.7+21
-  intl: ^0.16.1 #para formatos
-  jiffy: ^3.0.1 #date 
-  lottie: ^0.7.0+1
+  google_fonts: ^2.0.0
+  google_maps_flutter: ^2.0.3
+  google_maps_webservice: ^0.0.19
+  google_sign_in: ^4.5.9 #observado #login con google
+  image_cropper: ^1.4.0
+  image_picker: ^0.7.4
+  intl: ^0.17.0 #para formatos
+  jiffy: ^4.1.0 #observado #date 
+  lottie: ^0.7.0+1 #aca me quede, continuar
   mailer: 
   map_launcher: ^0.4.5
   mime_type:
@@ -78,7 +74,7 @@ dependencies:
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons:   
+  
 
   # dio: ^3.0.10
   # dio_http_cache: ^0.2.8
